--- a/Pixiv_Wallpaper_WinUI/MultilingualResources/Pixiv_Wallpaper_WinUI.zh-Hans.xlf
+++ b/Pixiv_Wallpaper_WinUI/MultilingualResources/Pixiv_Wallpaper_WinUI.zh-Hans.xlf
@@ -107,9 +107,8 @@
           <target state="translated">获取pixiv推荐队列失败</target>
         </trans-unit>
         <trans-unit id="FailToGetQueueExplanation" translate="yes" xml:space="preserve">
-          <source>Please check your network connection and make sure you have enter the correct account and password</source>
-          <target state="needs-review-translation">请检查你的网络连接并输入正确的账号密码</target>
-          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
+          <source>Please check your network connection and try to re-enter your account &amp; password in order to pass the reCaptcha certification.</source>
+          <target state="translated">请检查你的网络连接并尝试重新输入账号密码登录以绕过reCAPTCHA人机认证。</target>
         </trans-unit>
         <trans-unit id="Illustrator" translate="yes" xml:space="preserve">
           <source>Illustrator: </source>
@@ -161,8 +160,7 @@
         </trans-unit>
         <trans-unit id="ReviewTimes.Text" translate="yes" xml:space="preserve">
           <source> times review</source>
-          <target state="needs-review-translation"> 次浏览</target>
-          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
+          <target state="translated"> 次浏览</target>
         </trans-unit>
         <trans-unit id="Setting.Text" translate="yes" xml:space="preserve">
           <source>Setting</source>
@@ -218,8 +216,7 @@
         </trans-unit>
         <trans-unit id="Bookmark.Content" translate="yes" xml:space="preserve">
           <source>Pixiv Bookmark</source>
-          <target state="needs-review-translation">Pixiv 书签</target>
-          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
+          <target state="translated">Pixiv 书签</target>
         </trans-unit>
         <trans-unit id="BookmarkUpdate" translate="yes" xml:space="preserve">
           <source>Bookmark illustration queue has been updated</source>
@@ -242,8 +239,8 @@
           <target state="translated">已关注用户的插画更新队列已更新</target>
         </trans-unit>
         <trans-unit id="PixivLogin.Text" translate="yes" xml:space="preserve">
-          <source>Pixiv Login</source>
-          <target state="translated">登录Pixiv</target>
+          <source>Pixiv Login...</source>
+          <target state="translated">登录Pixiv中...</target>
         </trans-unit>
         <trans-unit id="PixivLoginExplanation.Text" translate="yes" xml:space="preserve">
           <source>The app will store your account and password locally</source>
@@ -264,6 +261,55 @@
         <trans-unit id="SaveButton.Content" translate="yes" xml:space="preserve">
           <source>Save</source>
           <target state="translated">保存</target>
+        </trans-unit>
+        <trans-unit id="ReLogin.Content" translate="yes" xml:space="preserve">
+          <source>Log out</source>
+          <target state="translated">退出登录</target>
+        </trans-unit>
+        <trans-unit id="FailToLogin" translate="yes" xml:space="preserve">
+          <source>Credentials expired</source>
+          <target state="translated">凭证已过期</target>
+        </trans-unit>
+        <trans-unit id="Dayly" translate="yes" xml:space="preserve">
+          <source>Dayly</source>
+          <target state="translated">每日排行榜</target>
+        </trans-unit>
+        <trans-unit id="Monthly" translate="yes" xml:space="preserve">
+          <source>Monthly</source>
+          <target state="translated">每月排行榜</target>
+        </trans-unit>
+        <trans-unit id="Weekly" translate="yes" xml:space="preserve">
+          <source>Weekly</source>
+          <target state="translated">每周排行榜</target>
+        </trans-unit>
+        <trans-unit id="Ranking.Content" translate="yes" xml:space="preserve">
+          <source>Pixiv Ranking</source>
+          <target state="translated">Pixiv 排行榜</target>
+        </trans-unit>
+        <trans-unit id="RankingRefresh" translate="yes" xml:space="preserve">
+          <source>Ranking illustration queue has been updated</source>
+          <target state="translated">排行榜插画队列已更新</target>
+        </trans-unit>
+        <trans-unit id="Dark" translate="yes" xml:space="preserve">
+          <source>Dark</source>
+          <target state="translated">深色</target>
+        </trans-unit>
+        <trans-unit id="Light" translate="yes" xml:space="preserve">
+          <source>Light</source>
+          <target state="translated">浅色</target>
+        </trans-unit>
+        <trans-unit id="ThemeSelect.Text" translate="yes" xml:space="preserve">
+          <source>Color Theme</source>
+          <target state="needs-review-translation">颜色主题</target>
+          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
+        </trans-unit>
+        <trans-unit id="ThemeSelectExplain.Text" translate="yes" xml:space="preserve">
+          <source>This option will be applied after the app restarts</source>
+          <target state="translated">此项更改将在应用下次启动时生效</target>
+        </trans-unit>
+        <trans-unit id="FailToLoginTry" translate="yes" xml:space="preserve">
+          <source>Fail to login with the "no SNI mode", now try to login one more time with the normal mode. It's required to re-enter your account and password.</source>
+          <target state="new">Fail to login with the "no SNI mode", now try to login one more time with the normal mode. It's required to re-enter your account and password.</target>
         </trans-unit>
       </group>
     </body>
