暂时解决多语言支持不完善导致的崩溃问题

--- a/Pixiv_Wallpaper_WinUI/String/en-US/Resources.resw
+++ b/Pixiv_Wallpaper_WinUI/String/en-US/Resources.resw
@@ -301,7 +301,7 @@
     <value> Pixel</value>
   </data>
   <data name="ReviewTimes.Text" xml:space="preserve">
-    <value> times review</value>
+    <value> reviews</value>
   </data>
   <data name="SaveButton.Content" xml:space="preserve">
     <value>Save</value>
